# choreo-projects

./: README.md
choreo-apim/awurudu-greeting/: go.mod  main.go
choreo-apim/juice-time-reminder/: go.mod  main.go
choreo-apim/lunch-invitation/: go.mod  main.go
debug-tools/httpbin-proxy/: README.md  go.mod  main.go  openapi.yaml
go-fasthttp-reverse-proxy/: Dockerfile  README.md  config.yaml  go.mod  go.sum  main.go
go-fiber-reverse-proxy/: go.mod  main.go
go-reverse-proxy/: go.mod
httpbin-proxy/: Dockerfile  README.md  go.mod  main.go
jmeter/: README.md  config.toml  config.yaml  keystore.p12  perf.jmx
rust-actix-reverse-proxy/: Cargo.toml  Dockerfile  README.md  config.toml
rust-actix-reverse-proxy/src/: main.rs
rust-reverse-proxy/: .env  Cargo.toml  Dockerfile  README.md
rust-reverse-proxy/certs/: cacert.pem
rust-reverse-proxy/src/: main.rs
